docs/7.52/md/abennews-71.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70_ehps.htm) → 

Changes in Release 7.0, EhP2

After the completion of Release 7.0, Application Server ABAP was developed further in the release track 7.1, 7.2. Almost all further developments in the ABAP language and related tools of Release 7.2 were transported to Release 7.0 for EhP2 of Release 7.0 (known internally as 7.02). The following new features are provided:
[Decimal Floating Point Numbers](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-decfloat.htm)
[Expression Positions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-expressions.htm)
[Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-string_processing.htm)
[Logical Expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-logical_expressions.htm)
[Class-Based Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-exceptions.htm)
[ABAP Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-abap-objects.htm)
[Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-itab.htm)
[Boxed Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-boxed_components.htm)
[Shared Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-shared_objects.htm)
[Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-sql.htm)
[Remote Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-rfc.htm)
[XML Interface](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-xml.htm)
[Lists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-lists.htm)
[Enhancements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-enhancements.htm)
[Pragmas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-pragmas.htm)
[Lazy Loading of Programs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-program_load.htm)
[Tools](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-710-tools.htm)
[Further Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-710-others.htm)
[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-docu.htm)

Note

The following were not continued:

-   The operational package concept in which package errors are detected by the syntax check and produced syntax errors
    
-   Support for class-based exceptions in RFC.
    

Continue
[Decimal Floating Point Numbers in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-decfloat.htm)
[Expression Positions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-expressions.htm)
[Character String and Byte String Processing in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-string_processing.htm)
[Logical Expressions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-logical_expressions.htm)
[Class-Based Exceptions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-exceptions.htm)
[ABAP Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-abap-objects.htm)
[Internal Tables in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-itab.htm)
[Boxed Components in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-boxed_components.htm)
[Shared Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-shared_objects.htm)
[Database Access in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-sql.htm)
[Remote Function Call in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-rfc.htm)
[XML Interface in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-xml.htm)
[Lists in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-lists.htm)
[Enhancements in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-enhancements.htm)
[Pragmas in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-pragmas.htm)
[Lazy Loading of Programs in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-program_load.htm)
[Tools in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-710-tools.htm)
[Further Changes in 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-710-others.htm)
[ABAP Keyword Documentation in Release 7.0 EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71-docu.htm)