docs/7.57/md/abennews-71.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.0 and its EhPs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70_ehps.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.0, EhP2, ABENNEWS-71, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0
ASuggestion for improvement:)

News for Release 7.0, EhP2

After the completion of [ABAP release](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_release_glosry.htm "Glossary Entry") 7.0, Application Server ABAP was developed further in the release track 7.1, 7.2. Almost all further developments in the ABAP language and related tools of release 7.2 were transported to release 7.0 for enhancement package 2 of release 7.0 (known internally as 7.02). The following new features are provided:

-   [Decimal Floating Point Numbers in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-decfloat.htm)
-   [Expression Positions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-expressions.htm)
-   [Character String and Byte String Processing in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-string_processing.htm)
-   [Logical Expressions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-logical_expressions.htm)
-   [Class-Based Exceptions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-exceptions.htm)
-   [ABAP Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-abap-objects.htm)
-   [Internal Tables in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-itab.htm)
-   [Boxed Components in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-boxed_components.htm)
-   [Shared Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-shared_objects.htm)
-   [Database Access in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-sql.htm)
-   [Remote Function Call in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-rfc.htm)
-   [XML Binding in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-xml.htm)
-   [Lists in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-lists.htm)
-   [Enhancements in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-enhancements.htm)
-   [Pragmas in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-pragmas.htm)
-   [Lazy Loading of Programs in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-program_load.htm)
-   [Tools in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-710-tools.htm)
-   [Further Changes in 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-710-others.htm)
-   [ABAP Keyword Documentation in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-docu.htm)

Hint

The following were not continued:

-   The operational package concept in which package errors are detected by the syntax check and produced syntax errors
-   Support for class-based exceptions in RFC.

Continue
[Decimal Floating Point Numbers in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-decfloat.htm)
[Expression Positions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-expressions.htm)
[Character String and Byte String Processing in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-string_processing.htm)
[Logical Expressions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-logical_expressions.htm)
[Class-Based Exceptions in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-exceptions.htm)
[ABAP Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-abap-objects.htm)
[Internal Tables in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-itab.htm)
[Boxed Components in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-boxed_components.htm)
[Shared Objects in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-shared_objects.htm)
[Database Access in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-sql.htm)
[Remote Function Call in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-rfc.htm)
[XML Binding in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-xml.htm)
[Lists in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-lists.htm)
[Enhancements in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-enhancements.htm)
[Pragmas in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-pragmas.htm)
[Lazy Loading of Programs in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-program_load.htm)
[Tools in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-710-tools.htm)
[Further Changes in 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-710-others.htm)
[ABAP Keyword Documentation in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71-docu.htm)